modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-capabilities/test_samples/constraint_templates/pss_baseline/005-allowed-no-capabilities.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-no-capabilities
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
