modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-capabilities/test_samples/constraint_templates/pss_baseline/007-disallowed-deployment-net-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: disallowed-deployment-net-admin
  namespace: testns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          securityContext:
            capabilities:
              add:
              - NET_ADMIN
