modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-capabilities/test_samples/constraint_templates/pss_baseline/009-disallowed-multiple-containers-one-disallowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed-multiple-containers-one-disallowed
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
      securityContext:
        capabilities:
          add:
            - AUDIT_WRITE
    - name: redis
      image: redis
      securityContext:
        capabilities:
          add:
            - SYS_ADMIN
