modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-capabilities/test_suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-allowed-capabilities
tests:
- name: pss-baseline
  template: ../../templates/security/allowed-capabilities.yaml
  constraint: constraint_pss_baseline.yaml
  cases:
  - name: 005-allowed-no-capabilities
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/005-allowed-no-capabilities.yaml
    assertions:
    - violations: no
  - name: 001-allowed-audit-write
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/001-allowed-audit-write.yaml
    assertions:
    - violations: no
  - name: 004-allowed-multiple-capabilities
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/004-allowed-multiple-capabilities.yaml
    assertions:
    - violations: no
  - name: 010-disallowed-net-admin
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/010-disallowed-net-admin.yaml
    assertions:
    - violations: yes
  - name: 003-allowed-deployment-no-capabilities
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/003-allowed-deployment-no-capabilities.yaml
    assertions:
    - violations: no
  - name: 007-disallowed-deployment-net-admin
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/007-disallowed-deployment-net-admin.yaml
    assertions:
    - violations: no
  - name: 002-allowed-daemonset-no-capabilities
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/002-allowed-daemonset-no-capabilities.yaml
    assertions:
    - violations: no
  - name: 006-disallowed-daemonset-net-admin
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/006-disallowed-daemonset-net-admin.yaml
    assertions:
    - violations: no
  - name: 011-disallowed-sys-admin
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/011-disallowed-sys-admin.yaml
    assertions:
    - violations: yes
  - name: 009-disallowed-multiple-containers-one-disallowed
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/009-disallowed-multiple-containers-one-disallowed.yaml
    assertions:
    - violations: yes
  - name: 008-disallowed-initContainer-disallowed-capability
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/008-disallowed-initContainer-disallowed-capability.yaml
    assertions:
    - violations: yes
- name: pss-restricted
  template: ../../templates/security/allowed-capabilities.yaml
  constraint: constraint_pss_restricted.yaml
  cases:
  - name: 015-allowed-no-capabilities-drop-all
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_restricted/015-allowed-no-capabilities-drop-all.yaml
    assertions:
    - violations: no
  - name: 014-allowed-net-bind-service-drop-all
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_restricted/014-allowed-net-bind-service-drop-all.yaml
    assertions:
    - violations: no
  - name: 020-disallowed-not-dropping-all
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_restricted/020-disallowed-not-dropping-all.yaml
    assertions:
    - violations: yes
  - name: 019-disallowed-no-drop-capabilities
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_restricted/019-disallowed-no-drop-capabilities.yaml
    assertions:
    - violations: yes
  - name: 018-disallowed-disallowed-capability
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_restricted/018-disallowed-disallowed-capability.yaml
    assertions:
    - violations: yes
  - name: 013-allowed-deployment-no-capabilities-drop-all
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_restricted/013-allowed-deployment-no-capabilities-drop-all.yaml
    assertions:
    - violations: no
  - name: 017-disallowed-deployment-disallowed-capability
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_restricted/017-disallowed-deployment-disallowed-capability.yaml
    assertions:
    - violations: no
  - name: 012-allowed-daemonset-no-capabilities-drop-all
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_restricted/012-allowed-daemonset-no-capabilities-drop-all.yaml
    assertions:
    - violations: no
  - name: 016-disallowed-daemonset-disallowed-capability
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_restricted/016-disallowed-daemonset-disallowed-capability.yaml
    assertions:
    - violations: no
- name: pss-baseline-with-exception
  template: ../../templates/security/allowed-capabilities.yaml
  constraint: constraint_pss_baseline.yaml
  cases:
  - name: 024-029-allowed-by-exception-net-admin
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/024-allow-net-admin.yaml
    object: test_samples/security_policy_exceptions/pods/029-allowed-by-exception-net-admin.yaml
    assertions:
    - violations: no
  - name: 022-027-allowed-by-exception-multiple-capabilities
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/022-allow-multiple-capabilities.yaml
    object: test_samples/security_policy_exceptions/pods/027-allowed-by-exception-multiple-capabilities.yaml
    assertions:
    - violations: no
  - name: 024-030-disallowed-by-exception-capability-mismatch
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/024-allow-net-admin.yaml
    object: test_samples/security_policy_exceptions/pods/030-disallowed-by-exception-capability-mismatch.yaml
    assertions:
    - violations: yes
  - name: 033-disallowed-no-exception-label
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/security_policy_exceptions/pods/033-disallowed-no-exception-label.yaml
    assertions:
    - violations: yes
  - name: 024-026-allowed-by-exception-mismatch-but-constraint-allows
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/024-allow-net-admin.yaml
    object: test_samples/security_policy_exceptions/pods/026-allowed-by-exception-mismatch-but-constraint-allows.yaml
    assertions:
    - violations: no
  - name: 024-032-disallowed-by-exception-multiple-containers-one-mismatch
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/024-allow-net-admin.yaml
    object: test_samples/security_policy_exceptions/pods/032-disallowed-by-exception-multiple-containers-one-mismatch.yaml
    assertions:
    - violations: yes
  - name: 036-037-allowed-by-container-exception-net-admin
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/036-allow-net-admin-container.yaml
    object: test_samples/security_policy_exceptions/pods/036-allowed-by-container-exception-net-admin.yaml
    assertions:
    - violations: yes
  - name: 024-036-037-allowed-by-merged-exception-container-overrides-global
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/024-allow-net-admin.yaml
    - test_samples/security_policy_exceptions/exceptions/036-allow-net-admin-container.yaml
    object: test_samples/security_policy_exceptions/pods/037-allowed-by-merged-exception-container-overrides-global.yaml
    assertions:
    - violations: no
  - name: 036-038-allowed-by-container-exception-nginx-only
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/036-allow-net-admin-container.yaml
    object: test_samples/security_policy_exceptions/pods/038-allowed-by-container-exception-nginx-only.yaml
    assertions:
    - violations: yes
- name: pss-restricted-with-exception
  template: ../../templates/security/allowed-capabilities.yaml
  constraint: constraint_pss_restricted.yaml
  cases:
  - name: 023-028-allowed-by-exception-net-admin-drop-all
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/023-allow-net-admin-drop-all.yaml
    object: test_samples/security_policy_exceptions/pods/028-allowed-by-exception-net-admin-drop-all.yaml
    assertions:
    - violations: no
  - name: 023-031-disallowed-by-exception-drop-mismatch
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/023-allow-net-admin-drop-all.yaml
    object: test_samples/security_policy_exceptions/pods/031-disallowed-by-exception-drop-mismatch.yaml
    assertions:
    - violations: yes
  - name: 034-disallowed-by-add
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/security_policy_exceptions/pods/034-disallowed-add.yaml
    assertions:
    - violations: yes
  - name: 021-034-allowed-by-exception-add
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/021-allow-multiple-capabilities.yaml
    object: test_samples/security_policy_exceptions/pods/034-disallowed-add.yaml
    assertions:
    - violations: no
  - name: 025-035-disallowed-by-exception-empty-spec
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/025-empty-spec.yaml
    object: test_samples/security_policy_exceptions/pods/035-disallowed-by-exception-empty-spec.yaml
    assertions:
    - violations: yes
